# shrinko8

./: .gitignore  .gitmodules  LICENSE  LICENSE.PARENS-8  README.md  bbs_tests.lst  files.lst  media_utils.py  new_cart.p8  pico_annotate.py  pico_cart.py  pico_compress.py  pico_constfold.py  pico_defs.py  pico_desugar.py  pico_export.py  pico_lint.py  pico_minify.py  pico_obfuscate.py  pico_output.py  pico_parse.py  pico_preprocess.py  pico_process.py  pico_rename.py  pico_tokenize.py  pico_unminify.py  pico_utils.py  picotron_cart.py  picotron_defs.py  picotron_export.py  picotron_fs.py  pyinstaller.spec  pyproject.toml  requirements.lst  run_bbs_tests.py  run_pico.py  run_prepackage.py  run_shrinko.py  run_site_tests.py  run_tests.py  (+12 more)
scripts/: p8_prelude.lua  parens8.lua  split.py
site/: index.html  index.js  utils.js  worker.js
test_compare/: bad-tab.txt  bad.txt  bad.url  badcount.txt  comment.lua  compiler.p8  compiler_desugar.p8  compiler_rename.p8  const.p8  const.p8.printh  const2.p8  const2.txt  constchars.p8  constcl-1.p8  constcl-2.p8  constcl.p8  constmin.p8  consttron.p64  consttronmin.p64  default.rom  default2.rom  deflang.p8  deptron.p64  genend.p8  globasmemb.p8  input-reformat.p8  input-un.p8  keep_comment.p8  loadtron.p64  merged.p8  metatron.p64  mini.p8  minuscount.txt  nopreserve.p8  notnil.p8  output-simp.p8  output.p8  output.p8.printh  output_min.p8  output_minrename-ih.p8  (+69 more)
test_input/: bad.p8  badinc.lua  badinc.p8  comment.lua  compiler.lua  compiler.p8  compiler.py  const.p8  const2.p8  constchars.p8  constcl.p8  consttron.p64  default.p8  (+45 more)
(+11 files in other folders)
